@@ -16,32 +16,29 @@
 
 package dagger.internal.codegen.writing;
 
-import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkState;
 import static dagger.internal.codegen.binding.SourceFiles.classFileName;
 import static dagger.internal.codegen.extension.DaggerStreams.toImmutableMap;
 import static java.lang.Character.isUpperCase;
 import static java.lang.String.format;
 
-import com.google.common.base.CharMatcher;
-import com.google.common.base.Splitter;
-import com.google.common.collect.ImmutableListMultimap;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Multimaps;
 import com.squareup.javapoet.ClassName;
+import dagger.internal.codegen.base.Preconditions;
 import dagger.internal.codegen.base.UniqueNameSet;
+import dagger.internal.codegen.base.Util;
 import dagger.internal.codegen.binding.BindingGraph;
 import dagger.internal.codegen.binding.ComponentCreatorDescriptor;
 import dagger.internal.codegen.binding.ComponentDescriptor;
 import dagger.internal.codegen.binding.KeyFactory;
 import dagger.model.Key;
 import jakarta.inject.Inject;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 import javax.lang.model.element.Name;
 import javax.lang.model.element.TypeElement;
 
@@ -52,14 +49,12 @@ import javax.lang.model.element.TypeElement;
 public final class ComponentNames {
   /** Returns the class name for the root component. */
   public static ClassName getRootComponentClassName(ComponentDescriptor componentDescriptor) {
-    checkState(!componentDescriptor.isSubcomponent());
+    Preconditions.checkState(!componentDescriptor.isSubcomponent());
     ClassName componentName = ClassName.get(componentDescriptor.typeElement());
     return ClassName.get(componentName.packageName(), "Dagger" + classFileName(componentName));
   }
 
-  private static final Splitter QUALIFIED_NAME_SPLITTER = Splitter.on('.');
-
-  private final ImmutableMap<ComponentDescriptor, String> namesByDescriptor;
+  private final Map<ComponentDescriptor, String> namesByDescriptor;
   private final Map<Key, ComponentDescriptor> descriptorsByCreatorKey;
 
   @Inject
@@ -87,52 +82,52 @@ public final class ComponentNames {
    * ComponentDescriptor}.
    */
   String getCreatorName(ComponentDescriptor componentDescriptor) {
-    checkArgument(componentDescriptor.creatorDescriptor().isPresent());
+    Preconditions.checkArgument(componentDescriptor.creatorDescriptor().isPresent());
     ComponentCreatorDescriptor creatorDescriptor = componentDescriptor.creatorDescriptor().get();
     return get(componentDescriptor) + creatorDescriptor.kind().typeName();
   }
 
-  private static ImmutableMap<ComponentDescriptor, String> namesByDescriptor(BindingGraph graph) {
-    ImmutableListMultimap<String, ComponentDescriptor> componentDescriptorsBySimpleName =
-        Multimaps.index(graph.componentDescriptors(), ComponentNames::simpleName);
+  private static Map<ComponentDescriptor, String> namesByDescriptor(BindingGraph graph) {
+    Map<String, List<ComponentDescriptor>> componentDescriptorsBySimpleName =
+        graph.componentDescriptors().stream().collect(Collectors.groupingBy(ComponentNames::simpleName, LinkedHashMap::new, Collectors.toList()));
     Map<ComponentDescriptor, String> subcomponentImplSimpleNames = new LinkedHashMap<>();
-    componentDescriptorsBySimpleName.asMap().values().stream()
+    componentDescriptorsBySimpleName.values().stream()
         .map(ComponentNames::disambiguateConflictingSimpleNames)
         .forEach(subcomponentImplSimpleNames::putAll);
     subcomponentImplSimpleNames.remove(graph.componentDescriptor());
-    return ImmutableMap.copyOf(subcomponentImplSimpleNames);
+    return subcomponentImplSimpleNames;
   }
 
   private static Map<Key, ComponentDescriptor> descriptorsByCreatorKey(
-      KeyFactory keyFactory, ImmutableSet<ComponentDescriptor> subcomponents) {
+      KeyFactory keyFactory, Set<ComponentDescriptor> subcomponents) {
     return subcomponents.stream()
         .filter(subcomponent -> subcomponent.creatorDescriptor().isPresent())
         .collect(
             toImmutableMap(
                 subcomponent ->
                     keyFactory.forSubcomponentCreator(
-                        subcomponent.creatorDescriptor().get().typeElement().asType()),
+                        subcomponent.creatorDescriptor().orElseThrow().typeElement().asType()),
                 subcomponent -> subcomponent));
   }
 
-  private static ImmutableMap<ComponentDescriptor, String> disambiguateConflictingSimpleNames(
+  private static Map<ComponentDescriptor, String> disambiguateConflictingSimpleNames(
       Collection<ComponentDescriptor> componentsWithConflictingNames) {
     // If there's only 1 component there's nothing to disambiguate so return the simple name.
     if (componentsWithConflictingNames.size() == 1) {
-      ComponentDescriptor component = Iterables.getOnlyElement(componentsWithConflictingNames);
-      return ImmutableMap.of(component, simpleName(component));
+      ComponentDescriptor component = Util.getOnlyElement(componentsWithConflictingNames);
+      return Map.of(component, simpleName(component));
     }
 
     // There are conflicting simple names, so disambiguate them with a unique prefix.
     // We keep them small to fix https://github.com/google/dagger/issues/421.
     UniqueNameSet nameSet = new UniqueNameSet();
-    ImmutableMap.Builder<ComponentDescriptor, String> uniqueNames = ImmutableMap.builder();
+    Map<ComponentDescriptor, String> uniqueNames = new LinkedHashMap<>();
     for (ComponentDescriptor component : componentsWithConflictingNames) {
       String simpleName = simpleName(component);
       String basePrefix = uniquingPrefix(component);
       uniqueNames.put(component, format("%s_%s", nameSet.getUniqueName(basePrefix), simpleName));
     }
-    return uniqueNames.build();
+    return uniqueNames;
   }
 
   private static String simpleName(ComponentDescriptor component) {
@@ -146,12 +141,12 @@ public final class ComponentNames {
 
     // If parent element looks like a class, use its initials as a prefix.
     if (!containerName.isEmpty() && isUpperCase(containerName.charAt(0))) {
-      return CharMatcher.javaLowerCase().removeFrom(containerName);
+      return containerName.replaceAll("[a-z]", "");
     }
 
     // Not in a normally named class. Prefix with the initials of the elements leading here.
     Name qualifiedName = typeElement.getQualifiedName();
-    Iterator<String> pieces = QUALIFIED_NAME_SPLITTER.split(qualifiedName).iterator();
+    Iterator<String> pieces = Arrays.asList(qualifiedName.toString().split("[.]", -1)).iterator();
     StringBuilder b = new StringBuilder();
 
     while (pieces.hasNext()) {
